# SQL-RL

./: .gitignore  README.md  pyproject.toml
BIRD-Critic-SQLite-email/: emai.txt
docs/: 工程文档.md  执行记录.md  数据文档.md  环境配置文档.md  设计文档.md
scripts/: check_sql_debug_data.py  merge_bird_critic_sqlite.py  prepare_six_gym_data.py  run_gold_sanity.py  smoke_test_bird_eval.py
sql_rl/: __init__.py
sql_rl/data/: __init__.py  six_gym.py
sql_rl/prompts/: __init__.py  sql_repair.py
sql_rl/rewards/: __init__.py  bird_critic.py
